[package]
name = "ast-complexity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
cc = "*"

[dependencies]
tree-sitter = "0.20.3"
tree-sitter-c = "0.20.6"
tree-sitter-dockerfile = "0.1.0"
tree-sitter-java = "0.20.2"
tree-sitter-javascript = "~0.20.1"
tree-sitter-json = "0.19.0"
tree-sitter-md = "0.1.5"
tree-sitter-python = "0.20.4"
tree-sitter-rust = "0.20.3"
tree-sitter-toml = "0.20.0"